--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gasolineras",
+  "name": "gasolinapp",
   "version": "1.0.0",
   "description": "an-app-that-shows-gas-price",
   "author": "stanete",
