--- a/package.json
+++ b/package.json
@@ -48,11 +48,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
+    "moduleFileExtensions": ["js", "json", "ts"],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
